# segment_Sa2VA

./: .gitignore  .gitmodules  README.md  models_download.py  pyproject.toml  requirements_blackwell.txt
demo/: demo.py
docs/: finetune.md
projects/sa2va/: README.md
projects/sa2va/configs/: sa2va_finetune.py  sa2va_in30_14b.py  sa2va_in30_2b.py  sa2va_in30_8b.py  sa2va_qwen_finetune.py
projects/sa2va/configs/sa2va_qwenvl25/: sa2va_qwen25_3b.py  sa2va_qwen25_7b.py
projects/sa2va/configs/sa2va_qwenvl3/: sa2va_qwen3_4b.py
projects/sa2va/datasets/: __init__.py  base.py  common.py  data_utils.py  sa2va_data_01_refseg.py  sa2va_data_02_vqa.py  sa2va_data_03_refvos.py  sa2va_data_04_videoqa.py  sa2va_data_05_gcg.py  sa2va_data_06_vp.py  sa2va_data_finetune.py
projects/sa2va/evaluation/: dist_test.sh  metrics_gcg.py  run_all_evals.py  sa2va_eval_gcg.py  sa2va_eval_ref_vos.py  sa2va_eval_refcoco.py
projects/sa2va/evaluation/dataset/: RES.py  __init__.py  refVOS.py  ref_sav.py
projects/sa2va/gradio/: app.py  app3.py
projects/sa2va/models/: __init__.py  sa2va.py  sam2_train.py  utils.py
sa2va_eval/projects/ST/: chat_sa2va_st.py  chat_sa2va_st_lisa_res_debug.py  chat_sa2va_st_vp.py  sam2_refine.py
sa2va_eval/vlmeval/: config.py
sa2va_eval/vlmeval/dataset/: __init__.py  mmbench_video.py  videomme.py
sa2va_eval/vlmeval/smp/: misc.py
sa2va_eval/vlmeval/vlm/: __init__.py  internvl_chat.py  internvl_chat_ori.py  sa2va_chat.py  st_chat.py  vlmeval_vlm_qwen2mm_mrope.py
third_parts/revos/utils/: metircs.py
third_parts/segment_anything/modeling/: prompt_encoder.py
tools/: convert_to_hf.py  convert_to_pth.py
tools/eval/: eval_mevis.py  eval_ref_sav.py  eval_revos.py
vlm/utils/: __init__.py  vis_utils.py
(+126 files in other folders)
