[project]
name = "sa2va"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decord==0.6.0",
    "flash-attn==2.7.3",
    "google-genai>=1.25.0",
    "hydra-core>=1.3.2",
    "octorun>=0.1.2",
    "openai>=1.97.1",
    "peft==0.11.1",
    "pycocotools>=2.0.10",
    "tfd-utils>=0.2.4",
    "timm==1.0.17",
    "torch>=2.4.0",
    "transformers==4.49.0",
    "xtuner[deepspeed]==0.1.23",
    "validators",
    "xlsxwriter",
    "tabulate",
    "sty",
    "portalocker",
    "moviepy==1.0.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu12", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu12", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu12"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.dependency-metadata]]
name = "mmengine"
version = "0.10.7"
requires-dist = [
  "addict", "matplotlib", "numpy", "opencv-python-headless", 
  "pyyaml", "rich", "termcolor", "yapf",
]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.3"
requires-dist = ["torch", "einops"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

